<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abbreviation_hour">h</string>
    <string name="abbreviation_minute">min</string>
    <string name="action_add_access_point">add Access Point</string>
    <string name="action_add">Add account</string>
    <string name="action_add_log_entry">add</string>
    <string name="action_add_time_balancing_entry">Time balancing</string>
    <string name="action_delete_access_point">delete access point(s)</string>
    <string name="action_delete">Delete account</string>
    <string name="action_delete_log_entry">delete</string>
    <string name="action_donate">Donate</string>
    <string name="action_edit">Edit account</string>
    <string name="action_edit_log_entry">edit</string>
    <string name="action_join_log_entry">join</string>
    <string name="action_open_github">Contribute</string>
    <string name="action_pebble_app_store">Open Pebble App Store</string>
    <string name="action_recommend">Recommend</string>
    <string name="action_settings">Settings</string>
    <string name="activate_wifi_auto_discover">Discover (1h)</string>
    <string name="aggregation_week">Week</string>
    <string name="app_name">TinyTimeTracker</string>
    <string name="change">Change</string>
    <string name="channel_description_new_access_points">Shows notifications for new access points for your current tracker.</string>
    <string name="channel_description_service">Indicates when the background service is in progress.</string>
    <string name="channel_description_status">Shows notifications about the status of your current tracker.</string>
    <string name="channel_name_new_access_points">New access points</string>
    <string name="channel_name_service">Service status</string>
    <string name="channel_name_status">TinyTimeTracker status notifications</string>
    <string name="confirm_delete">Delete</string>
    <string name="confirm_delete_question">Do you really want to delete this tracker and all data ?</string>
    <string name="csv_export">CSV export</string>
    <string name="detail_last_month">last month</string>
    <string name="detail_this_month">this month</string>
    <string name="dialog_message_thank_you">Thank you very much for your donation.</string>
    <string name="dialog_message_pending_purchase">Your purchase was not yet confirmed by Google Play.</string>
    <string name="dialog_message_already_owned">This item was already bought.</string>
    <string name="dialog_msg_wifi_networks_progress">Scanning for WiFi networks</string>
    <string name="dialog_title_database_backup">Database files</string>
    <string name="dialog_title_share_database">Select an application</string>
    <string name="dialog_title_thank_you">Thanks</string>
    <string name="dialog_title_time_balancing_entry">Time balancing</string>
    <string name="dialog_title_wifi_networks">Active WiFi networks</string>
    <string name="dialog_title_wifi_networks_progress">Scanning</string>
    <string name="edit_tracker_access_point_list">Tracked Access Points</string>
    <string name="edit_tracker_verbose_name_hint">Display name</string>
    <string name="edit_tracker_working_hours_hint">Daily working hours</string>
    <string name="label_auto_detection_off">WiFi detection: OFF</string>
    <string name="label_auto_detection_on">WiFi detection: ON</string>
    <string name="label_toggle_clockin_state_end">Stop</string>
    <string name="label_toggle_clockin_state_start">Start</string>
    <string name="manage_permissions">Manage permissions</string>
    <string name="message_no_data">No data</string>
    <string name="new_access_point_action_add">Add</string>
    <string name="new_access_point_action_ignore">Ignore</string>
    <string name="new_access_point_message">A new access point was found for the account %1$s: %2$s (%3$s).</string>
    <string name="pref_about">About</string>
    <string name="pref_category_theme">Style</string>
    <string name="pref_credits">Credits</string>
    <string name="pref_data_export">Backup and restore</string>
    <string name="pref_summary_notification_new_access_points">Automatically discover new access points and show a notification.</string>
    <string name="pref_summary_reference_time_months">Months in the past which are used to calculate statistical values.</string>
    <string name="pref_summary_seconds_connection_lost">Short times of absence are not counted as a break.</string>
    <string name="pref_summary_show_notifications">Show notifications in the notification area.</string>
    <string name="pref_title_auto_disable_wifi">Automatically disable WiFi</string>
    <string name="pref_title_export">Data export</string>
    <string name="pref_title_import">Data import</string>
    <string name="pref_title_notification_new_access_points">Automatic discovery</string>
    <string name="pref_title_reference_time_months">Reference time</string>
    <string name="pref_title_seconds_connection_lost">Bridge short breaks</string>
    <string name="pref_title_share">Share</string>
    <string name="pref_title_show_notifications">Notifications</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_unit_notification_interval_minutes">min</string>
    <string name="pref_wifi_settings">Wifi</string>
    <string name="purchase_pro_version">Buy the professional version</string>
    <string name="recommend_app_desc">Choose an app to share your recommendation.</string>
    <string name="recommend_app_subject">I would like to recommend this time tracking app to you.</string>
    <string name="service_in_progress">Background service is active.</string>
    <string name="theme_auto">automatic</string>
    <string name="theme_dark">dark</string>
    <string name="theme_light">light</string>
    <string name="title_warning_location_services_off">Error</string>
    <string name="warning_location_permission_not_granted">The permission to access the coarse location is currently not granted. You should grant this permission in order to allow scanning for WiFi networks.</string>
    <string name="warning_location_services_off">Location services are currently disabled. You should enable location services in order to make TinyTimeTracker work.</string>
    <string-array name="time_balance_type">
        <item>Time off</item>
        <item>Overtime</item>
    </string-array>
    <string name="since">since</string>
</resources>
