<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="ifRoom|collapseActionView" />
    <item android:id="@+id/action_add"
        android:title="@string/action_add"
        android:icon="@drawable/ic_add"
        app:showAsAction="ifRoom|collapseActionView" />
    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom|collapseActionView" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom|collapseActionView" />
    <item android:id="@+id/action_pebble_app_store"
        android:title="@string/action_pebble_app_store"
        app:showAsAction="never" />
    <item android:id="@+id/action_open_github"
        android:title="@string/action_open_github"
        app:showAsAction="never" />
    <item android:id="@+id/action_donate"
        android:title="@string/action_donate"
        app:showAsAction="never" />
    <item android:id="@+id/action_recommend"
        android:title="@string/action_recommend"
        app:showAsAction="never" />
</menu>
