<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_wifi_settings"
        android:key="pref_key_worktime_settings">

        <firebirdberlin.com.tinytimetracker.SeekBarPreference
            android:dialogMessage="@string/pref_summary_seconds_connection_lost"
            android:key="pref_key_absence_time"
            android:defaultValue="20"
            android:max="60"
            android:summary="@string/pref_summary_seconds_connection_lost"
            android:title="@string/pref_title_seconds_connection_lost"
            android:text="@string/pref_unit_notification_interval_minutes"/>

        <CheckBoxPreference
            android:title="@string/pref_title_show_notifications"
            android:defaultValue="false"
            android:summary="@string/pref_summary_show_notifications"
            android:key="pref_key_show_notifications"
            android:disableDependentsState="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_data_export"
        android:key="pref_key_data_backup">

        <Preference
            android:title="@string/pref_title_export"
            android:key="pref_key_data_export"/>

        <Preference
            android:title="@string/pref_title_import"
            android:key="pref_key_data_import"/>

        <Preference
            android:title="@string/pref_title_share"
            android:key="pref_key_data_share"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_credits"
        android:key="pref_key_credits">

        <com.firebirdberlin.tinytimetracker.VersionPreference
            android:key="version"
            android:summary="2016 - Stefan Fruhner (stefan.fruhner@gmail.com)">
            
            <intent android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=com.firebirdberlin.tinytimetracker"/>
        </com.firebirdberlin.tinytimetracker.VersionPreference>

        <Preference
            android:key="pref_static_credits2"
            android:title="SeekBarPreference"
            android:summary="Matthew Wiggins">
            <intent android:action="android.intent.action.VIEW"
                android:data="http://android.hlidskialf.com/blog/code/android-seekbar-preference" />
        </Preference>
        <Preference
            android:key="pref_static_icon_1"
            android:title="Icon: hourglass"
            android:summary="RRZEicons">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://commons.wikimedia.org/wiki/File:Hourglass_2.svg" />
        </Preference>
        <Preference
            android:key="pref_static_icon_2"
            android:title="Icons"
            android:summary="icons8">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://icons8.com/" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
